waybar: dont show mic volume and prevent overlap

--- a/homeManagerModules/apps/waybar/style.css
+++ b/homeManagerModules/apps/waybar/style.css
@@ -86,7 +86,7 @@ window#waybar {
 #custom-power {
   /* background-color: @surface0; */
   /* margin: 4px 4px 4px 4px; */
-  padding: 0px 10px 0px 10px;
+  /* padding: 0px 10px 0px 10px; */
   /* border-radius: 1rem; */
 }
 
